kubernetes/argocd/jellyseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyseerr.home.neels.tech`)
      services:
        - name: jellyseerr-tcp
          port: 80
  tls:
    secretName: jellyseerr-home-neels-tech-tls
